--- a/AgroTrade/Views/Shared/_Layout.cshtml
+++ b/AgroTrade/Views/Shared/_Layout.cshtml
@@ -85,16 +85,17 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Crop" asp-action="Index">Marketplace</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About Us</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         @if (Context.Request.Cookies.TryGetValue("UserId", out var userId))
                         {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="chat" asp-route-id="@userId">Chat</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Transaction" asp-action="Index" asp-route-id="@userId">History</a>
                             </li>
